--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2021"
 [dependencies]
 gettext-rs = { version = "0.7", features = ["gettext-system"] }
 gtk = { version = "0.6", package = "gtk4" }
+serde = { version = "1.0.164", features = ["derive"] }
+serde_json = "1.0.99"
 
 [dependencies.adw]
 package = "libadwaita"
