metadata: fix typo

--- a/data/dev.bragefuglseth.Fretboard.appdata.xml.in
+++ b/data/dev.bragefuglseth.Fretboard.appdata.xml.in
@@ -11,7 +11,7 @@
 
 	<description>
 	  <p>
-	    How was that chord played again? Fretboard lets you find guitar chords
+	    How was that chord played, again? Fretboard lets you find guitar chords
 	    by typing their name or plotting them into an interactive guitar neck.
 	    No matter if you are are a beginner or an advanced guitarist, you can use
 	    Fretboard to practice, learn, and master your favorite songs!
