--- a/data/dev.bragefuglseth.Fretboard.appdata.xml.in
+++ b/data/dev.bragefuglseth.Fretboard.appdata.xml.in
@@ -12,7 +12,7 @@
 	<description>
 	  <p>
 	    How was that chord played, again? Fretboard lets you find guitar chords
-	    by typing their name or plotting them into an interactive guitar neck.
+	    by typing their name or plotting them on an interactive guitar neck.
 	    No matter if you are are a beginner or an advanced guitarist, you can use
 	    Fretboard to practice, learn, and master your favorite songs!
 	  </p>
