--- a/data/icons/meson.build
+++ b/data/icons/meson.build
@@ -1,5 +1,3 @@
-application_id = 'dev.bragefuglseth.Fretboard'
-
 scalable_dir = join_paths('hicolor', 'scalable', 'apps')
 install_data(
   join_paths(scalable_dir, ('@0@.svg').format(application_id)),
@@ -8,6 +6,7 @@ install_data(
 
 symbolic_dir = join_paths('hicolor', 'symbolic', 'apps')
 install_data(
-  join_paths(symbolic_dir, ('@0@-symbolic.svg').format(application_id)),
-  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
+  join_paths(symbolic_dir, ('@0@-symbolic.svg').format(base_id)),
+  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir),
+  rename: '@0@-symbolic.svg'.format(application_id)
 )
