--- a/meson.build
+++ b/meson.build
@@ -7,7 +7,24 @@ project('fretboard', 'rust',
 i18n = import('i18n')
 gnome = import('gnome')
 
+base_id = 'dev.bragefuglseth.Fretboard'
 
+version = meson.project_version()
+
+if get_option('profile') == 'development'
+  profile = 'Devel'
+  vcs_tag = run_command('git', 'rev-parse', '--short', 'HEAD', check: false).stdout().strip()
+  if vcs_tag == ''
+    version_suffix = '-devel'
+  else
+    version_suffix = '-@0@'.format(vcs_tag)
+  endif
+  application_id = '@0@.@1@'.format(base_id, profile)
+else
+  profile = ''
+  version_suffix = ''
+  application_id = base_id
+endif
 
 subdir('data')
 subdir('src')
