--- a/src/meson.build
+++ b/src/meson.build
@@ -9,7 +9,8 @@ gnome.compile_resources('fretboard',
 )
 
 conf = configuration_data()
-conf.set_quoted('VERSION', meson.project_version())
+conf.set_quoted('APP_ID', application_id)
+conf.set_quoted('VERSION', version + version_suffix)
 conf.set_quoted('GETTEXT_PACKAGE', 'fretboard')
 conf.set_quoted('LOCALEDIR', join_paths(get_option('prefix'), get_option('localedir')))
 conf.set_quoted('PKGDATADIR', pkgdatadir)
