--- a/data/dev.bragefuglseth.Fretboard.appdata.xml.in
+++ b/data/dev.bragefuglseth.Fretboard.appdata.xml.in
@@ -51,7 +51,7 @@
     <value key="Purism::form_factor">mobile</value>
   </custom>
   <releases>
-    <release date="2023-07-XX" version="1.0">
+    <release date="2023-07-01" version="1.0">
       <description>
         <p>Initial release.</p>
       </description>
