feat: port to blueprint

--- a/src/meson.build
+++ b/src/meson.build
@@ -1,11 +1,26 @@
 pkgdatadir = join_paths(get_option('prefix'), get_option('datadir'), meson.project_name())
 gnome = import('gnome')
 
+blueprints = custom_target('blueprints',
+  input: files(
+    'ui/chord-diagram-toggle.blp',
+    'ui/chord-diagram-top-toggle.blp',
+    'ui/barre-spin.blp',
+    'ui/chord-diagram.blp',
+    'ui/chord-name-entry.blp',
+    'ui/chord-preview.blp',
+    'ui/window.blp',
+  ),
+  output: '.',
+  command: [find_program('blueprint-compiler'), 'batch-compile', '@OUTPUT@', '@CURRENT_SOURCE_DIR@', '@INPUT@'],
+)
+
 gnome.compile_resources('fretboard',
   'fretboard.gresource.xml',
   gresource_bundle: true,
   install: true,
   install_dir: pkgdatadir,
+  dependencies: blueprints,
 )
 
 conf = configuration_data()
