feat: enhance keyboard support

--- a/src/meson.build
+++ b/src/meson.build
@@ -10,6 +10,7 @@ blueprints = custom_target('blueprints',
     'ui/chord-name-entry.blp',
     'ui/chord-preview.blp',
     'ui/window.blp',
+    'ui/help-overlay.blp',
   ),
   output: '.',
   command: [find_program('blueprint-compiler'), 'batch-compile', '@OUTPUT@', '@CURRENT_SOURCE_DIR@', '@INPUT@'],
