--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,19 +6,6 @@ on:
 name: CI
 
 jobs:
-  rustfmt:
-    name: Rustfmt
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions-rs/toolchain@v1
-        with:
-          profile: minimal
-          toolchain: stable
-          override: true
-          components: rustfmt
-      - name: Run cargo fmt
-        run: cargo fmt --all -- --check
 
   flatpak:
     name: Flatpak
@@ -31,6 +18,6 @@ jobs:
     - uses: bilelmoussaoui/flatpak-github-actions/flatpak-builder@v6
       with:
         bundle: gtk-rust-template.flatpak
-        manifest-path: build-aux/com.belmoussaoui.GtkRustTemplate.Devel.json
+        manifest-path: dev.bragefuglseth.Fretboard.json
         run-tests: true
         cache-key: flatpak-builder-${{ github.sha }}
