--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,9 +15,11 @@ jobs:
       options: --privileged
     steps:
     - uses: actions/checkout@v3
+      with:
+      	submodules: recursive
     - uses: bilelmoussaoui/flatpak-github-actions/flatpak-builder@v6
       with:
-        bundle: gtk-rust-template.flatpak
+        bundle: fretboard.flatpak
         manifest-path: dev.bragefuglseth.Fretboard.json
         run-tests: true
         cache-key: flatpak-builder-${{ github.sha }}
