--- a/meson.build
+++ b/meson.build
@@ -1,7 +1,8 @@
-project('fretboard', 'rust', 
-          version: '2.0',
-    meson_version: '>= 0.62.0',
-  default_options: [ 'warning_level=2', 'werror=false', ],
+project('fretboard',
+  'rust',
+  version: '2.0',
+  license: 'GPL-3.0-or-later',
+  meson_version: '>= 0.62.0',
 )
 
 i18n = import('i18n')
@@ -10,6 +11,14 @@ gnome = import('gnome')
 base_id = 'dev.bragefuglseth.Fretboard'
 
 version = meson.project_version()
+
+prefix = get_option('prefix')
+localedir = prefix / get_option('localedir')
+datadir = prefix / get_option('datadir')
+pkgdatadir = datadir / meson.project_name()
+iconsdir = datadir / 'icons'
+podir = meson.project_source_root() / 'po'
+gettext_package = meson.project_name()
 
 if get_option('profile') == 'development'
   profile = 'Devel'
@@ -29,7 +38,7 @@ endif
 meson.add_dist_script(
   'build-aux/dist-vendor.sh',
   meson.project_source_root(),
-  meson.project_build_root() / 'meson-dist' / '@0@-@1@'.format(meson.project_name(), meson.project_version()),
+  meson.project_build_root() / 'meson-dist' / meson.project_name() + '-' + meson.project_version(),
 )
 
 subdir('data')
