--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,6 @@ jobs:
     - uses: bilelmoussaoui/flatpak-github-actions/flatpak-builder@v6
       with:
         bundle: fretboard.flatpak
-        manifest-path: dev.bragefuglseth.Fretboard.json
+        manifest-path: dev.bragefuglseth.Fretboard.Devel.json
         run-tests: true
         cache-key: flatpak-builder-${{ github.sha }}
