--- a/data/meson.build
+++ b/data/meson.build
@@ -1,10 +1,16 @@
+desktop_conf = configuration_data()
+desktop_conf.set('icon', application_id)
 desktop_file = i18n.merge_file(
-        input: 'dev.bragefuglseth.Fretboard.desktop.in',
-       output: 'dev.bragefuglseth.Fretboard.desktop',
-         type: 'desktop',
-       po_dir: '../po',
-      install: true,
-  install_dir: join_paths(get_option('datadir'), 'applications')
+	type: 'desktop',
+  input: configure_file(
+    input: '@0@.desktop.in.in'.format(base_id),
+    output: '@BASENAME@',
+    configuration: desktop_conf
+  ),
+  output: '@0@.desktop'.format(application_id),
+  po_dir: podir,
+  install: true,
+  install_dir: datadir / 'applications'
 )
 
 desktop_utils = find_program('desktop-file-validate', required: false)
@@ -12,28 +18,34 @@ if desktop_utils.found()
   test('Validate desktop file', desktop_utils, args: [desktop_file])
 endif
 
+appdata_conf = configuration_data()
+appdata_conf.set('app-id', application_id)
+appdata_conf.set('gettext-package', gettext_package)
 appstream_file = i18n.merge_file(
-        input: 'dev.bragefuglseth.Fretboard.appdata.xml.in',
-       output: 'dev.bragefuglseth.Fretboard.appdata.xml',
-       po_dir: '../po',
-      install: true,
-  install_dir: join_paths(get_option('datadir'), 'appdata')
+  input: configure_file(
+    input:'@0@.metainfo.xml.in.in'.format(base_id),
+    output: '@BASENAME@',
+    configuration: appdata_conf
+  ),
+  output: '@0@.metainfo.xml'.format(application_id),
+  po_dir: podir,
+  install: true,
+  install_dir: datadir / 'appdata'
 )
 
-appstream_util = find_program('appstream-util', required: false)
-if appstream_util.found()
-  test('Validate appstream file', appstream_util, args: ['validate-relax', appstream_file])
-endif
+appstreamcli = find_program('appstreamcli', required: false, disabler: true)
+test('Validate appstream file', appstreamcli,
+	args: ['validate', '--no-net', '--explain',  appstream_file])
 
 install_data('dev.bragefuglseth.Fretboard.gschema.xml',
-  install_dir: join_paths(get_option('datadir'), 'glib-2.0/schemas')
+  install_dir: datadir / 'glib-2.0/schemas'
 )
 
 compile_schemas = find_program('glib-compile-schemas', required: false)
 if compile_schemas.found()
   test('Validate schema file',
-       compile_schemas,
-       args: ['--strict', '--dry-run', meson.current_source_dir()])
+    compile_schemas,
+    args: ['--strict', '--dry-run', meson.current_source_dir()])
 endif
 
 subdir('icons')
