--- a/src/meson.build
+++ b/src/meson.build
@@ -1,31 +1,6 @@
-gnome = import('gnome')
-
-blueprints = custom_target('blueprints',
-  input: files(
-    'ui/chord-diagram-toggle.blp',
-    'ui/chord-diagram-top-toggle.blp',
-    'ui/barre-spin.blp',
-    'ui/chord-diagram.blp',
-    'ui/chord-name-entry.blp',
-    'ui/chord-preview.blp',
-    'ui/window.blp',
-    'ui/help-overlay.blp',
-  ),
-  output: '.',
-  command: [find_program('blueprint-compiler'), 'batch-compile', '@OUTPUT@', '@CURRENT_SOURCE_DIR@', '@INPUT@'],
-)
-
-gnome.compile_resources('fretboard',
-  'fretboard.gresource.xml',
-  gresource_bundle: true,
-  install: true,
-  install_dir: pkgdatadir,
-  dependencies: blueprints,
-)
-
 conf = configuration_data()
 conf.set_quoted('APP_ID', application_id)
-conf.set_quoted('VERSION', version + version_suffix)
+conf.set_quoted('VERSION', version)
 conf.set_quoted('GETTEXT_PACKAGE', gettext_package)
 conf.set_quoted('LOCALEDIR', localedir)
 conf.set_quoted('PKGDATADIR', pkgdatadir)
