feat: mention Weblate

--- a/data/dev.bragefuglseth.Fretboard.metainfo.xml.in.in
+++ b/data/dev.bragefuglseth.Fretboard.metainfo.xml.in.in
@@ -49,7 +49,7 @@
   <url type="homepage">https://github.com/bragefuglseth/fretboard</url>
   <url type="bugtracker">https://github.com/bragefuglseth/fretboard/issues</url>
   <url type="contribute">https://github.com/bragefuglseth/fretboard#contributing</url>
-  <url type="translate">https://hosted.weblate.org/projects/fretboard</url>
+  <url type="translate">https://hosted.weblate.org/engage/fretboard/</url>
   <url type="vcs-browser">https://github.com/bragefuglseth/fretboard</url>
   <url type="contact">https://matrix.to/#/@bragefuglseth:matrix.org</url>
   <update_contact>brage.fuglseth_AT_gmail.com</update_contact>
