--- a/data/dev.bragefuglseth.Fretboard.metainfo.xml.in.in
+++ b/data/dev.bragefuglseth.Fretboard.metainfo.xml.in.in
@@ -61,7 +61,7 @@
         <ul>
           <li>Refined visuals taking advantage of the latest platform features</li>
           <li>Keyboard shortcuts for common actions</li>
-          <li>Italian, Russian, and Dutch translations, making Impression available in a total of 4 different languages</li>
+          <li>Italian, Russian, and Dutch translations, making Fretboard available in a total of 4 different languages</li>
         </ul>
         <p>If you would like to come with suggestions, report bugs, translate the app, or contribute otherwise, feel free to reach out!</p>
       </description>
