--- a/data/dev.bragefuglseth.Fretboard.metainfo.xml.in.in
+++ b/data/dev.bragefuglseth.Fretboard.metainfo.xml.in.in
@@ -64,13 +64,13 @@
     <value key="GnomeSoftware::key-colors">[(153, 193, 241)]</value>
   </custom>
   <releases>
-    <release date="2023-10-5" version="4.0">
+    <release date="2023-10-13" version="4.0">
       <description translatable="no">
-        <p>This release of Fretboard improves its accessibility:</p>
+        <p>This release of Fretboard makes it more accessible:</p>
         <ul>
           <li>Support for both left-handed and right-handed guitar types</li>
-          <li>Independence from text direction for the chord diagram, fixing the mirroring issue it had for right-to-left language users</li>
-          <li>Turkish and Spanish translations, making Fretboard available in a total of 6 languages</li>
+          <li>Independence from text direction for the chord diagram, fixing the mirroring issue it had with right-to-left languages</li>
+          <li>Turkish, Spanish, Norwegian, Portugese and Brazillian Portugese translations, making Fretboard available in a total of 9 languages</li>
         </ul>
         <p>If you would like to come with suggestions, report bugs, translate the app, or contribute otherwise, feel free to reach out!</p>
       </description>
