--- a/data/dev.bragefuglseth.Fretboard.metainfo.xml.in.in
+++ b/data/dev.bragefuglseth.Fretboard.metainfo.xml.in.in
@@ -5,7 +5,11 @@
   <metadata_license>CC0-1.0</metadata_license>
   <project_license>GPL-3.0-or-later</project_license>
   <name>Fretboard</name>
-  <developer_name>Brage Fuglseth</developer_name>
+  <!-- developer_name tag deprecated with Appstream 1.0 -->
+  <developer_name translatable="no">Brage Fuglseth</developer_name>
+  <developer id="gnome.org">
+    <name translatable="no">Brage Fuglseth</name>
+  </developer>
   <summary>Look up guitar chords</summary>
   <description>
     <p>
