--- a/data/dev.bragefuglseth.Fretboard.metainfo.xml.in.in
+++ b/data/dev.bragefuglseth.Fretboard.metainfo.xml.in.in
@@ -7,7 +7,7 @@
   <name>Fretboard</name>
   <!-- developer_name tag deprecated with Appstream 1.0 -->
   <developer_name translatable="no">Brage Fuglseth</developer_name>
-  <developer id="gnome.org">
+  <developer id="bragefuglseth.dev">
     <name translatable="no">Brage Fuglseth</name>
   </developer>
   <summary>Look up guitar chords</summary>
