--- a/data/dev.bragefuglseth.Fretboard.metainfo.xml.in.in
+++ b/data/dev.bragefuglseth.Fretboard.metainfo.xml.in.in
@@ -61,6 +61,12 @@
     <value key="GnomeSoftware::key-colors">[(153, 193, 241)]</value>
   </custom>
   <releases>
+    <release date="2024-01-06" version="5.2">
+      <description translatable="no">
+        <p>This update improves the translations of Fretboard into other languages.</p>
+      </description>
+    </release>
+
     <release date="2024-01-01" version="5.1">
       <description translatable="no">
         <p>This update contains small additions and improvements to follow up the recent major release:</p>
