--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,15 +4,11 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+adw = { package = "libadwaita", version = "0.6", features = ["v1_5"] }
 gettext-rs = { version = "0.7", features = ["gettext-system"] }
-gtk = { version = "0.7", package = "gtk4" }
+gtk = { package = "gtk4", version = "0.8", features = ["gnome_45"] }
 itertools = "0.11.0"
 once_cell = "1.18.0"
 rayon = "1.7.0"
 serde = { version = "1.0.164", features = ["derive"] }
 serde_json = "1.0.99"
-
-[dependencies.adw]
-package = "libadwaita"
-version = "0.5"
-features = ["v1_4"]
