--- a/po/meson.build
+++ b/po/meson.build
@@ -1,1 +1,8 @@
-i18n.gettext('fretboard', preset: 'glib')
+i18n.gettext(
+    'fretboard',
+    preset: 'glib',
+    args: [
+        '--keyword=i18n_fmt',
+        '--keyword=i18n_nfmt:1,2'
+    ]
+)
