--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 gettext-rs = { version = "0.7", features = ["gettext-system"] }
 gtk = { version = "0.7", package = "gtk4" }
+i18n-format = "0.2.0"
 itertools = "0.11.0"
 once_cell = "1.18.0"
 rayon = "1.7.0"
