--- a/data/dev.bragefuglseth.Fretboard.metainfo.xml.in.in
+++ b/data/dev.bragefuglseth.Fretboard.metainfo.xml.in.in
@@ -6,7 +6,7 @@
   <project_license>GPL-3.0-or-later</project_license>
   <name>Fretboard</name>
   <summary>Look up guitar chords</summary>
-  <developer id="bragefuglseth.dev">
+  <developer id="dev.bragefuglseth">
     <name translatable="no">Brage Fuglseth</name>
   </developer>
   <description>
