--- a/data/dev.bragefuglseth.Fretboard.metainfo.xml.in.in
+++ b/data/dev.bragefuglseth.Fretboard.metainfo.xml.in.in
@@ -64,12 +64,23 @@
   </supports>
   <launchable type="desktop-id">@app-id@.desktop</launchable>
   <releases>
+    <release date="2024-03-21" version="6.0">
+      <description translatable="no">
+        <p>GNOME 46 is here! Let’s celebrate:</p>
+        <ul>
+          <li>An upgraded base to take advantage of the latest platform improvements</li>
+          <li>French translations, making Fretboard available in 17 languages</li>
+        </ul>
+        <p>If you would like to come with suggestions, report bugs, translate the app, or contribute otherwise, feel free to reach out!</p>
+      </description>
+    </release>
+
     <release date="2024-02-29" version="5.4">
       <description translatable="no">
         <p>This is a minor release with a few tweaks and improvements, notably:</p>
         <ul>
           <li>More intelligent chord recognition, so the app can identify a broader set of patterns</li>
-          <li>Updated translations</li>
+          <li>French translations, making Impression available in </li>
         </ul>
         <p>If you would like to come with suggestions, report bugs, translate the app, or contribute otherwise, feel free to reach out!</p>
       </description>
