chore: Final fixes

--- a/data/dev.bragefuglseth.Fretboard.metainfo.xml.in.in
+++ b/data/dev.bragefuglseth.Fretboard.metainfo.xml.in.in
@@ -80,7 +80,7 @@
         <p>This is a minor release with a few tweaks and improvements, notably:</p>
         <ul>
           <li>More intelligent chord recognition, so the app can identify a broader set of patterns</li>
-          <li>French translations, making Impression available in </li>
+          <li>Updated translations</li>
         </ul>
         <p>If you would like to come with suggestions, report bugs, translate the app, or contribute otherwise, feel free to reach out!</p>
       </description>
