--- a/data/dev.bragefuglseth.Fretboard.metainfo.xml.in.in
+++ b/data/dev.bragefuglseth.Fretboard.metainfo.xml.in.in
@@ -68,7 +68,7 @@
       <description translatable="no">
         <p>GNOME 46 is here! Let’s celebrate:</p>
         <ul>
-          <li>An upgraded base to take advantage of the latest platform improvements</li>
+          <li>An upgraded base taking advantage of the latest platform improvements</li>
           <li>French translations, making Fretboard available in 17 languages</li>
         </ul>
         <p>If you would like to come with suggestions, report bugs, translate the app, or contribute otherwise, feel free to reach out!</p>
