--- a/data/dev.bragefuglseth.Fretboard.metainfo.xml.in.in
+++ b/data/dev.bragefuglseth.Fretboard.metainfo.xml.in.in
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Copyright 2023 Brage Fuglseth -->
+<!-- Copyright 2024 Brage Fuglseth -->
 <component type="desktop-application">
   <id>@app-id@</id>
   <metadata_license>CC0-1.0</metadata_license>
@@ -64,6 +64,12 @@
   </supports>
   <launchable type="desktop-id">@app-id@.desktop</launchable>
   <releases>
+    <release date="2024-04-06" version="6.1">
+      <description translate="no">
+        <p>This update improves the translations of Fretboard into other languages.</p>
+      </description>
+    </release>
+
     <release date="2024-03-21" version="6.0">
       <description translate="no">
         <p>GNOME 46 is here! Let’s celebrate:</p>
