--- a/data/dev.bragefuglseth.Fretboard.metainfo.xml.in
+++ b/data/dev.bragefuglseth.Fretboard.metainfo.xml.in
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Copyright 2024 Brage Fuglseth -->
 <component type="desktop-application">
-  <id>@app-id@</id>
+  <id>dev.bragefuglseth.Fretboard.Devel</id>
   <metadata_license>CC0-1.0</metadata_license>
   <project_license>GPL-3.0-or-later</project_license>
   <name>Fretboard</name>
@@ -62,7 +62,7 @@
     <control>keyboard</control>
     <control>touch</control>
   </supports>
-  <launchable type="desktop-id">@app-id@.desktop</launchable>
+  <launchable type="desktop-id">dev.bragefuglseth.Fretboard.Devel.desktop</launchable>
   <releases>
     <release date="2024-04-06" version="6.1">
       <description translate="no">
