--- a/src/config.rs.in
+++ b/src/config.rs.in
@@ -1,4 +1,4 @@
 pub static APP_ID: &str = @APP_ID@;
 pub static GETTEXT_PACKAGE: &str = @GETTEXT_PACKAGE@;
 pub static LOCALEDIR: &str = @LOCALEDIR@;
-pub static PKGDATADIR: &str = @PKGDATADIR@;
+pub static _PKGDATADIR: &str = @PKGDATADIR@;
