--- a/data/dev.bragefuglseth.Fretboard.metainfo.xml.in.in
+++ b/data/dev.bragefuglseth.Fretboard.metainfo.xml.in.in
@@ -64,6 +64,12 @@
   </supports>
   <launchable type="desktop-id">@app-id@.desktop</launchable>
   <releases>
+    <release date="2024-09-18" version="8.0">
+      <description translate="no">
+        <p>GNOME 47 is here! This update moves Fretboard to an upgraded base taking advantage of the latest platform improvements.</p>
+      </description>
+    </release>
+
     <release date="2024-07-07" version="7.1">
       <description translate="no">
         <p>This update improves the translations of Fretboard into other languages.</p>
