docs: Add MobilePay link to FUNDING

--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,1 +1,1 @@
-custom: ['https://qr.vipps.no/box/c18bade5-d2c3-48a2-91ec-2eb235590bea/pay-in']
+custom: ['https://qr.vipps.no/box/c18bade5-d2c3-48a2-91ec-2eb235590bea/pay-in', 'https://qr.mobilepay.dk/box/c18bade5-d2c3-48a2-91ec-2eb235590bea/pay-in']
